# openmp_Algorithms

./: CMakeLists.txt  Input.cpp  Input.h  PiCalculator.cpp  PiCalculator.h  Sort.cpp  Sort.h  TimedPiCalculator.cpp  TimedPiCalculator.h  Tree.h  main.cpp
